[package]
name = "email-newsletter-example"
version = "0.1.0"
edition = "2021"
authors = ["Noah Clarkson <unprotesting.email@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter-example"

[dependencies]
actix-web = "4.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"]}
config = "0.11"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]